--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ankurraj2606/namaste-react#readme",
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@parcel/transformer-sass": "^2.8.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
