--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@parcel/transformer-sass": "^2.8.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.2",
-    "process": "^0.11.10"
+    "postcss": "^8.4.21",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.2.4",
+    "yarn": "^1.22.19"
   },
   "dependencies": {
     "react": "^18.2.0",
